--- a/index.html
+++ b/index.html
@@ -30,5 +30,78 @@
             </ul>
         </div>
     </header>
+
+    <figure>
+        <video src="images/visual.mp4" autoplay muted loop></video>
+        <div class="inner">
+            <h1>INNOVATION</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br>
+                Id praesentium molestias similique quaerat magni facere in a? Adipisci, possimus reprehenderit!</p>
+            <a href="#">view detail</a>
+        </div>
+    </figure>
+
+    <section>
+        <div class="inner">
+            <h1>RECENT NEWS</h1>
+            <div class="wrap">
+                <article>
+                    <div class="pic">
+                        <img src="images/news1.jpg" alt="1번째 콘텐츠 이미지">
+                    </div>
+                    <h2><a href="#">Lorem1, ipsum dolor sit.</a></h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, molestiae! Hic qui in eveniet ratione consequuntur sequi magni quod, itaque modi et iusto sapiente odit nihil expedita, ea consectetur dolorum!</p>
+                </article>
+
+                <article>
+                    <div class="pic">
+                        <img src="images/news2.jpg" alt="2번째 콘텐츠 이미지">
+                    </div>
+                    <h2><a href="#">Lorem2, ipsum dolor sit.</a></h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, molestiae! Hic qui in eveniet ratione consequuntur sequi magni quod, itaque modi et iusto sapiente odit nihil expedita, ea consectetur dolorum!</p>
+                </article>
+
+                <article>
+                    <div class="pic">
+                        <img src="images/news3.jpg" alt="3번째 콘텐츠 이미지">
+                    </div>
+                    <h2><a href="#">Lorem3, ipsum dolor sit.</a></h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, molestiae! Hic qui in eveniet ratione consequuntur sequi magni quod, itaque modi et iusto sapiente odit nihil expedita, ea consectetur dolorum!</p>
+                </article>
+
+                <article>
+                    <div class="pic">
+                        <img src="images/news4.jpg" alt="4번째 콘텐츠 이미지">
+                    </div>
+                    <h2><a href="#">Lorem4, ipsum dolor sit.</a></h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, molestiae! Hic qui in eveniet ratione consequuntur sequi magni quod, itaque modi et iusto sapiente odit nihil expedita, ea consectetur dolorum!</p>
+                </article>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="inner">
+            <div class="upper">
+                <h1>DCODALB</h1>
+                <ul>
+                    <li><a href="#">Policy</a></li>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Family Site</a></li>
+                    <li><a href="#">Sitemap</a></li>
+                </ul>
+            </div>
+
+            <div class="lower">
+                <address>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, facere.<br>
+                    TEL : 031-111-1234    C.P. : 010-1234-5678
+                </address>
+                <p>
+                    2024 DCODELAB & Copy; copyright all right reserved.
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
